k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: spendwise
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
